# english-project

./: .dockerignore  .gitignore  .mcp.json.example  AGENTS.md  CLAUDE.md  README.md  chat-ui-design.html  chat-ui-preview.html  clear_chat_history.py  oral-speaking-studio-preview.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
server/: .env.example  pyproject.toml  seed.py
server/ai/: __init__.py  config.py  main.py  rate_limit.py  run_server.py
server/ai/data/: __init__.py  agent_eval_cases.py
server/ai/routers/: chat.py  conversation.py  prompt.py  recommend.py
server/ai/schemas/: chat.py  conversation.py
server/ai/services/: agent_eval.py  agent_factory.py  chat.py  digest.py  (+14 more)
server/alembic/: env.py
server/app/: config.py  database.py  dependencies.py  main.py  middleware.py
server/data/: ecdict.sample.csv
server/english_mcp/: __main__.py  auth.py  config.py  context.py  db.py  http_server.py  middleware.py  rate_limit.py  runtime.py  server.py  tools_handlers.py
server/external_mcp/: __init__.py  fetch_http_server.py  fetch_server.py
server/scripts/: create_agent_eval_dataset.py  list_eval_users.py  probe_embedding.py  push_prompts_to_hub.py  run_agent_eval.py  seed_mcp_templates.py  smoke_admin_e2e.py  smoke_agent_eval.py  smoke_chat_agent.py  smoke_external_mcp_api.py  smoke_mcp_keys.py  smoke_mcp_keys_api.py  smoke_mcp_tools.py  smoke_my_words.py  smoke_prompt_loader.py  spike_mcp_list_tools.py  test_email.py  test_mcp_url_guard.py
server/shared/: alipay_client.py  clickhouse_client.py  email_client.py  mcp_crypto.py  minio_client.py
(+255 files in other folders)
